--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ version="0.1.06"
 
 [author]
 name="KENNYNGUYEN"
-email="nguyentiendat713@gmail"
+email="nguyentiendat713@gmail.com"
 
 [note]
-text="Based on NukeViet 4 CMS"
+text=""
