--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 id="0"
 type="module"
 name="videos"
-version="0.1.06"
+version="0.1.07"
 
 [author]
 name="KENNYNGUYEN"
 email="nguyentiendat713@gmail.com"
 
 [note]
-text=""
+text="Compatible with NukeViet RC"
