Fix notice when missing JW license
+ Notice Admin, User, Viewer when missing JW license (front-end and
back-end).
+ Fix version.

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 id="0"
 type="module"
 name="videos"
-version="0.1.09"
+version="0.1.10"
 
 [author]
 name="KENNYNGUYEN"
 email="nguyentiendat713@gmail.com"
 
 [note]
-text="Compatible with NukeViet RC"
+text="Compatible with NukeViet RC2"
