--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ name="videos"
 version="0.2.01"
 
 [author]
-name="KENNYNGUYEN"
+name="KENNY NGUYEN"
 email="nguyentiendat713@gmail.com"
 
 [note]
-text="Compatible with NukeViet RC2"
+text="Compatible with NukeViet 4 Final"
