--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 id="313"
 type="module"
 name="videos"
-version="0.2.04"
+version="0.2.05"
 
 [author]
 name="KENNY NGUYEN"
 email="nguyentiendat713@gmail.com"
 
 [note]
-text="Compatible with NukeViet 4 Final"
+text="Compatible with NukeViet 4.1"
